--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Portfolio Emanuel Casco</title>
+	<link rel="shortcut icon" type="image/png" href="stuff/favicon.ico"/>
 	<link rel="stylesheet" href="style.css"/>
   </head>
   <body>
